# ae-vqvae

./: .gitignore  CHANGELOG.md  README.md  TODO.md  ae.py  explore_ae_latent.py  explore_vae_latent.py  main.py  pyproject.toml  trainAE.py  trainVAE.py  trainVQVAE.py  visualize_ae.py  visualize_vae.py  visualize_vqvae.py
.antigravitycli/: 85233c5a-b470-4279-8ca7-38d51623904a.json
analysis/: intrinsic_dimension.py
common/: __init__.py  data.py  experiment.py  text_data.py  text_vqvae_config.py  tracking.py
configs/: codebook-init-2607122023.json  memory-trunk-dec-2607112148.json  text_vqvae_experiments.example.json  vqganencdec.json
legacy/analysis/: intrinsic_dimension.py
legacy/common/: data.py  experiment.py
legacy/models/: ae.py  vae.py  vqvae.py
legacy/training/: extend_variance_experiment.py  run_collapse_experiments.py  run_variance_experiments.py  trainAE.py  trainVAE.py  trainVQVAE.py  train_codebook_collapse.py
models/: text_decoders.py  text_encoders.py  text_layers.py  text_vqvae.py  vae.py
scripts/: sync_outputs_from_mech.sh
tests/: test_sync_outputs_script.py  test_text_vqvae.py
training/: extend_variance_experiment.py  run_collapse_experiments.py  run_experiment_sequence.py  run_text_vqvae_experiment.py  run_variance_experiments.py  trainAE.py  trainVAE.py  trainVQVAE.py  train_codebook_collapse.py  train_tokenizer.py
visualization/: compare_vae_vqvae.py  explore_ae_latent.py  explore_vae_latent.py  generate_beautiful_plots.py  render_geometry_animation.py  text_vqvae.py  visualize_ae.py  visualize_vae.py  visualize_vqvae.py
(+14 files in other folders)
