[project]
name = "ae-vqvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    "scikit-dimension>=0.3.4",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.20.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "wandb>=0.21.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "models*", "training*", "visualization*", "legacy*"]

[tool.pyright]
extraPaths = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
